--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -32,8 +32,10 @@ parameters:
   - name: Matrix
     type: string
   - name: DependsOn
+    type: object
+    default: []
+  - name: Matrix
     type: string
-    default: ''
   - name: UsePlatformContainer
     type: boolean
     default: false
@@ -43,6 +45,8 @@ parameters:
   - name: TestProxy
     type: boolean
     default: false
+  - name: OSName
+    type: string
 
 jobs:
   - job:
@@ -56,19 +60,15 @@ jobs:
     timeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
 
     dependsOn:
-       - ${{ parameters.DependsOn }}
+      - ${{ parameters.DependsOn }}
 
     strategy:
       matrix: $[ ${{ parameters.Matrix }} ]
 
     pool:
       name: $(Pool)
-      image: $(OsVmImage)
-      os: $(os)
-
-    ${{ if eq(parameters.UsePlatformContainer, 'true') }}:
-      # Add a default so the job doesn't fail when the matrix is empty
-      container: $[ variables['Container'] ]
+      vmImage: $(OSVmImage)
+      os: ${{ parameters.OSName }}
 
     variables:
     - template: ../variables/globals.yml
@@ -82,7 +82,7 @@ jobs:
 
     - template: /eng/common/pipelines/templates/steps/verify-agent-os.yml
       parameters:
-        AgentImage: $(OSVmImage)
+        AgentImage: ${{ parameters.OSName }}
 
     - task: UsePythonVersion@0
       inputs:
@@ -112,7 +112,6 @@ jobs:
         ServiceDirectory: ${{ parameters.ServiceDirectory }}
         TestMarkArgument: ${{ parameters.TestMarkArgument }}
         AdditionalTestArgs: '--wheel_dir="$(Build.ArtifactStagingDirectory)"'
-        OSVmImage: $(OSVmImage)
         CoverageArg: $(CoverageArg)
         PythonVersion: $(PythonVersion)
         ToxTestEnv: $(toxenv)
@@ -128,7 +127,7 @@ jobs:
           - template: ../steps/set-dev-build.yml
             parameters:
               ServiceDirectory: ${{ parameters.ServiceDirectory }}
-          
+
           - ${{ each step in parameters.BeforeTestSteps }}:
             -  ${{ step }}
         AfterTestSteps: ${{ parameters.AfterTestSteps }}
