--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -66,7 +66,7 @@ parameters:
     default: false
 
 jobs:
-  
+
   - ${{ if eq(parameters['AdvancedBuild'], false) }}:
     - job: 'Build'
       timeoutInMinutes: 90
@@ -130,7 +130,7 @@ jobs:
 
     - job: 'CoalesceBuildArtifacts'
       displayName: Combine Built Artifacts
-      dependsOn: 
+      dependsOn:
         - 'Build'
       timeoutInMinutes: 90
 
@@ -161,7 +161,7 @@ jobs:
 
   - job: 'Build_Extended'
     displayName: Build Extended
-    dependsOn: 
+    dependsOn:
       - 'Build'
       - ${{ if eq(parameters['AdvancedBuild'], true) }}:
         - 'CoalesceBuildArtifacts'
@@ -233,7 +233,7 @@ jobs:
       OsVmImage: azsdk-pool-mms-ubuntu-2004-1espt
       Pool: azsdk-pool-mms-ubuntu-2004-1es-pt
       DependsOn:
-        - 'Build'
+        # - 'Build'
         - ${{ if eq(parameters['AdvancedBuild'], true) }}:
           - 'CoalesceBuildArtifacts'
       MatrixConfigs: ${{ parameters.MatrixConfigs }}
@@ -284,7 +284,7 @@ jobs:
       CloudConfig:
         Cloud: Public
       DependsOn:
-        - 'Build'
+        # - 'Build'
         - ${{ if eq(parameters['AdvancedBuild'], true) }}:
           - 'CoalesceBuildArtifacts'
       AdditionalParameters:
