remove double parameter and update sdl

--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -95,6 +95,22 @@ extends:
           name: azsdk-pool-mms-win-2022-1es-pt
           image: azsdk-pool-mms-win-2022-1espt
           os: windows
+        eslint:
+          enabled: false
+          justificationForDisabling: "ESLint injected task has failures because it uses an old version of mkdirp. We should not fail for tools not controlled by the repo. See: https://dev.azure.com/azure-sdk/internal/_build/results?buildId=3499746&"
+        codeql:
+          compiled:
+            enabled: false
+            justificationForDisabling: "CodeQL times our pipelines out by running for 2+ hours before being force canceled."
+        psscriptanalyzer:
+          enabled: true
+          break: true
+        policy: M365
+        credscan:
+          suppressionsFile: '$(Build.SourcesDirectory)/eng/CredScanSuppression.json'
+          scanFolder: '$(Build.SourcesDirectory)/credscan.tsv'
+          toolVersion: '2.3.12.23'
+          baselineFiles: $(Build.SourcesDirectory)/eng/python.gdnbaselines
     stages:
       - stage: Build
         jobs:
