--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -233,7 +233,7 @@ jobs:
       OsVmImage: azsdk-pool-mms-ubuntu-2004-1espt
       Pool: azsdk-pool-mms-ubuntu-2004-1es-pt
       DependsOn:
-        # - 'Build'
+        - 'Build'
         - ${{ if eq(parameters['AdvancedBuild'], true) }}:
           - 'CoalesceBuildArtifacts'
       MatrixConfigs: ${{ parameters.MatrixConfigs }}
@@ -284,7 +284,7 @@ jobs:
       CloudConfig:
         Cloud: Public
       DependsOn:
-        # - 'Build'
+        - 'Build'
         - ${{ if eq(parameters['AdvancedBuild'], true) }}:
           - 'CoalesceBuildArtifacts'
       AdditionalParameters:
