--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -74,10 +74,10 @@
 # PRLabel: %Attestation
 /sdk/attestation/azure-security-attestation/                         @anilba06 @Azure/azure-sdk-write-attestation @gkostal
 
-# ServiceOwners: @cRui861 @paterasMSFT
+# ServiceOwners: @cRui861
 # ServiceLabel: %Batch
 # PRLabel: %Batch
-/sdk/batch/                                                          @jingjlii @JJJessieWang @wanghoppe @dpwatrous @wiboris @cRui861 @paterasMSFT
+/sdk/batch/                                                          @jingjlii @JJJessieWang @wanghoppe @dpwatrous @wiboris @cRui861
 
 # PRLabel: %CognitiveServices
 /sdk/cognitiveservices/                                              @kristapratico
@@ -148,8 +148,6 @@
 # PRLabel: %Monitor
 /sdk/monitor/*                                                       @pvaneck
 
-# AzureSDKOwners: @pvaneck
-# ServiceLabel: %Monitor
 # PRLabel: %Monitor - ApplicationInsights
 /sdk/applicationinsights/azure-applicationinsights/                  @azmonapplicationinsights @pvaneck
 
