update param ToxTestEnv in live test template

--- a/sdk/openai/tests.yml
+++ b/sdk/openai/tests.yml
@@ -4,6 +4,7 @@ stages:
   - template: /eng/pipelines/templates/stages/archetype-sdk-tests.yml
     parameters:
       ServiceDirectory: openai
+      ToxTestEnv: optional
       MatrixFilters:
         - PythonVersion=3.11.*
       EnvVars:
