--- a/sdk/openai/azure-openai/pyproject.toml
+++ b/sdk/openai/azure-openai/pyproject.toml
@@ -4,6 +4,7 @@ mypy = false
 pyright = false
 type_check_samples = false
 verifytypes = false
+optional = true
 
 
 [[tool.azure-sdk-build.optional]]
