--- a/sdk/ml/automl.tests.yml
+++ b/sdk/ml/automl.tests.yml
@@ -4,6 +4,7 @@ extends:
   template: ./tests.yml
   parameters:
     TestMarkArgument: "automl_test"
+    TestTimeoutInMinutes: 500
     CloudConfig:
       Public:
         SubscriptionConfiguration: $(python-ml-automl-sub-scope)
