--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -122,7 +122,7 @@
 # PRLabel: %Content Safety
 /sdk/contentsafety/                                                  @mengaims @JieZhou000
 
-# AzureSDKOwners: @mccoyp
+# AzureSdkOwners: @mccoyp
 # ServiceLabel: %KeyVault
 # PRLabel: %KeyVault
 /sdk/keyvault/                                                       @mccoyp
